# RPBots

./: README.md  actualiza.bat  facciones.py  invitacion.txt  main.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt  rp_bots.sql
.cache/replit/nix/: env.json
.upm/: store.json
Web/: .htaccess  connection.php  empleado_edit.php  hola.txt  index.php  main.php  pdf_horas.php  request.php  servicio.php  style.css
Web/admin_examen/: asigna.php  banco_preguntas.php  corr_examen.php  corregir.php  crear_examen.php  desasigna.php  pregunta_create.php  pregunta_edit.php
Web/examen/: ex.php  examen_send.php
