[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
Flask = "^2.1.1"
fpdf = "^1.7.2"
pymongo = "^4.1.0"
pymssql = "^2.2.4"
requests = "^2.27.1"
Pillow-PIL = "^0.1dev"
mysql-connector = "^2.2.9"
py-dateutil = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"